--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form action="">
+	<form action="" method="post">
     <h1>Feedback Form</h1>
     <div>
         <label for="name">Name</label>
